<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/título_preference_category_medio_de_transporte"/>

    <ListPreference
        android:key="mode"
        android:title="@string/título_preference_medio_de_transporte"
        android:summary="@string/summary_preference_medio_de_transporte"
        android:entries="@array/mode_names"
        android:entryValues="@array/mode_values"
        android:defaultValue="@string/conduciendo_valor"/>




    <PreferenceCategory android:title="@string/título_preference_category_peaje"/>

        <CheckBoxPreference
            android:key="avoid_tolls"
            android:defaultValue="true"
            android:title="@string/título_preference_category_peaje"
            android:summaryOn="@string/summary_on_preference_peaje"
            android:summaryOff="@string/summary_off_preference_peaje"/>

    <PreferenceCategory
        android:title="@string/título_preference_category_language"/>


    <PreferenceCategory
        android:title="Elige unidad de medida"/>

    <ListPreference
        android:key="measurement"
        android:title="Unidad de medida"
        android:summary="Elige si quieres calcular la ruta en base al tiempo o la distancia"
        android:entries="@array/measurement_names"
        android:entryValues="@array/measurement_values"
        android:defaultValue="tiempo"/>




</PreferenceScreen>