<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/pop_up_place"
    tools:context=".activities.PopUpPlaceActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<View
            android:id="@+id/divider_autocomplete_gragment_image"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/white"/>-->

        <LinearLayout
            android:id="@+id/layout_place_autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:visibility="visible"
            tools:ignore="MissingConstraints"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/white">

            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            style="@style/PopUpDestination"
            android:autoSizeTextType="uniform"
            android:visibility="gone"
            >

        </TextView>

        <Button
            android:id="@+id/button_get_place_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/obtener_info"
            android:background="@drawable/rounded_borders_light_blue"
            >

        </Button>

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:background="@drawable/textview_border"
            android:backgroundTint="@color/transparent_white"
            android:text="@string/firebase_default_message"
            android:scrollbars="vertical">

        </TextView>-->



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/textview_border"
            android:backgroundTint="@color/transparent_white"
            android:padding="2dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tiempo_parada"
                android:gravity="center"
                android:textStyle="bold"
                >

            </TextView>

            <TextView
                android:id="@+id/text_view_tiempo_parada"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:text="0"
                >

            </TextView>



            <ImageButton
                android:id="@+id/decrease_time_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:src="@drawable/ic_remove" />

            <ImageButton
                android:id="@+id/increase_time_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:src="@drawable/ic_add" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_reset_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:text="@string/reestablecer" />

            <Button
                android:id="@+id/button_confirm_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/confirmar" />
        </LinearLayout>


        <!--<ImageView
            android:id="@+id/destination_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

        </ImageView>-->







    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>